--- a/component/.vscode/tasks.json
+++ b/component/.vscode/tasks.json
@@ -1,17 +1,14 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "test",
-            "type": "shell",
-            "command": "ts-node",
-            "args": [
-                "--inspect-brk",
-                "./main.ts"
-            ],
-            "problemMatcher": []
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "run main",
+      "type": "shell",
+      "command": "ts-node",
+      "args": ["--inspect-brk", "./main.ts"],
+      "problemMatcher": []
+    }
+  ]
 }
