--- a/parcel/ts/tsconfig.json
+++ b/parcel/ts/tsconfig.json
@@ -8,7 +8,8 @@
     "skipDefaultLibCheck": true,
     "outFile": "dist/main.min.js",
     "rootDir": "src",
-    "module": "none"
+    "module": "none",
+    "moduleResolution": "node"
   },
   "include": ["src", "typings"]
 }
