--- a/webpack/webpack4/package.json
+++ b/webpack/webpack4/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-loader": "^4.0.0-beta.0",
-    "typescript": "^2.6.2",
-    "webpack": "^4.0.0-beta.0",
-    "webpack-cli": "^2.0.4"
+    "ts-loader": "^4.0.0",
+    "typescript": "^2.7.2",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
     "redux": "^3.7.2"
