--- a/webpack/splitchunk/package.json
+++ b/webpack/splitchunk/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack-dev": "webpack --mode development --config webpack.config.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack-dev": "webpack --config webpack.config.dev.js",
+    "webpack-dev-server": "webpack-dev-server --config webpack.config.dev.js",
+    "webpack-prod": "webpack --config webpack.config.prod.js"
   },
+  "sideEffects": ["./src/main.ts"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +19,8 @@
     "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
-    "redux": "^3.7.2"
+    "lodash": "^4.17.5",
+    "redux": "^3.7.2",
+    "rxjs": "^5.5.10"
   }
 }
