--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "ts-node main.ts"
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,10 @@
     "@types/puppeteer": "^1.3.2",
     "jest": "^23.1.0",
     "puppeteer": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.0.0",
+    "ts-jest": "^22.4.6",
+    "typescript": "^2.9.1"
   }
 }
