--- a/jsx/package.json
+++ b/jsx/package.json
@@ -1,14 +1,29 @@
 {
-  "name": "jsx",
+  "author": "zsytssk@gmail.com",
+  "contributors": [],
+  "license": "UNLICENSED",
+  "name": "bomb_dog",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "index.js",
+  "directories": {
+    "doc": "doc"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "preact": "^8.2.9"
+  "scripts": {
+    "webpack_dev": "webpack --colors --config webpack.config.dev.js",
+    "webpack-dev-server_dev": "webpack-dev-server --colors --config webpack.config.dev.js",
+    "webpack_release": "webpack --config  webpack.config.prod.js",
+    "release_js": "node ./script/releaseFile/main.js release_js",
+    "release_libs": "node ./script/releaseFile/main.js release_libs",
+    "release_light": "node ./script/releaseFile/main.js release_light",
+    "release_all": "node ./script/releaseFile/main.js release_all"
+  },
+  "devDependencies": {
+    "ts-loader": "^4.3.1",
+    "typescript": "^2.9.1",
+    "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   }
 }
