--- a/jsx/tsconfig.json
+++ b/jsx/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "compilerOptions": {
-    "lib": ["es2016", "dom"],
-    "target": "esnext",
-    "module": "CommonJS",
-    "allowJs": true,
-    "jsxFactory": "h",
-    "jsx": "react",
-    "experimentalDecorators": true
-  }
+    "compilerOptions": {
+        "allowJs": true,
+        "experimentalDecorators": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "rootDir": "src",
+        "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
+        "sourceMap": false,
+        "target": "es6",
+        "watch": true
+    },
+    "include": ["src", "typings", "laya/libs"]
 }
