--- a/jsx/tsconfig.webpack.json
+++ b/jsx/tsconfig.webpack.json
@@ -8,7 +8,7 @@
     "skipDefaultLibCheck": true,
     "moduleResolution": "node",
     "jsx": "react",
-    "jsxFactory": "createElement"
+    "jsxFactory": "h"
   },
   "include": ["./src"]
 }
