--- a/webpack/babel/package.json
+++ b/webpack/babel/package.json
@@ -2,21 +2,19 @@
   "name": "webpack-babel-es6",
   "version": "0.0.1",
   "devDependencies": {
-    "@types/webpack": "^3.0.5",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "cross-env": "^5.0.1",
-    "file-loader": "^0.11.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1",
-    "webpack-notifier": "^1.5.0"
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-transform-typescript": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
+    "babel-loader": "^8.0.0-beta.4",
+    "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "dev": "tsc -p tsconfig.webpack.json && webpack --progress --color",
-    "test": "tsc -p tsconfig.webpack.json && webpack",
-    "deploy": "webpack --config webpack.production.config.js"
+    "webpack-dev": "webpack --mode development",
+    "webpack-dev-server": "webpack-dev-server --mode development",
+    "webpack-prod": "webpack --mode production"
   }
 }
