--- a/rxjs/tsconfig.json
+++ b/rxjs/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["es2016", "dom"],
-    "target": "esnext",
-    "module": "CommonJS",
     "allowJs": true,
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "rootDir": "src",
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "target": "es6",
+    "watch": true
+  },
+  "include": ["src"]
 }
