--- a/webpack/ts/package.json
+++ b/webpack/ts/package.json
@@ -22,7 +22,8 @@
         "typescript": "^2.9.1",
         "webpack": "^4.11.1",
         "webpack-cli": "^3.0.2",
-        "webpack-dev-server": "^3.1.4"
+        "webpack-dev-server": "^3.1.4",
+        "rxjs": "^5.5.6"
     },
     "dependencies": {
         "es6-promise": "^4.2.4"
