--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rust_test"
+name = "snake_game"
 version = "0.1.0"
-authors = ["zsytssk <zsytssk@gmail.com>"]
-
-[lib]
-name = "mylib"
-path = "src/lib.rs"
+authors = ["youcodethings <spyr1014@gmail.com>"]
 
 [dependencies]
-rand="0.5.5"
+piston = "0.36.0"
+piston2d-graphics = "0.26.0"
+pistoncore-glutin_window = "0.45.0"
+piston2d-opengl_graphics = "0.52.0"
+rand = "0.4"
