--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "snake_game"
+name = "test"
 version = "0.1.0"
-authors = ["youcodethings <spyr1014@gmail.com>"]
+authors = ["me <zsytssk@gmail.com>"]
+
+[lib]
+name = "mylib"
 
 [dependencies]
-piston = "0.36.0"
-piston2d-graphics = "0.26.0"
-pistoncore-glutin_window = "0.45.0"
-piston2d-opengl_graphics = "0.52.0"
-rand = "0.4"
