--- a/rust/copy_file/Cargo.toml
+++ b/rust/copy_file/Cargo.toml
@@ -3,3 +3,7 @@ name = "copy_file"
 version = "0.1.0"
 authors = ["zsytssk <zsytssk@gmail.com>"]
 edition = "2018"
+
+[lib]
+name = "mylib"
+path = "src/lib.rs"
