--- a/downloadFiles/package.json
+++ b/downloadFiles/package.json
@@ -11,22 +11,21 @@
         "doc": "doc"
     },
     "scripts": {
-        "webpack-dev": "webpack --mode development",
-        "webpack-dev-server": "webpack-dev-server --mode development",
-        "webpack-prod": "webpack --mode production"
+        "build": "ts-node --files ./src/main.ts"
     },
     "devDependencies": {
         "@types/node": "^10.12.12",
-        "rxjs": "^5.5.6",
         "ts-loader": "^4.3.1",
         "tslint": "^5.10.0",
-        "tslint-config-prettier": "^1.13.0",
         "typescript": "^2.9.1",
+        "ts-node": "^7.0.1",
         "webpack": "^4.11.1",
         "webpack-cli": "^3.0.2",
         "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
-        "es6-promise": "^4.2.4"
+        "es6-promise": "^4.2.4",
+        "iconv-lite": "^0.4.24",
+        "jsdom": "^13.0.0"
     }
 }
