--- a/webpack/ts/package.json
+++ b/webpack/ts/package.json
@@ -19,11 +19,10 @@
         "ts-loader": "^4.3.1",
         "tslint": "^5.10.0",
         "tslint-config-prettier": "^1.13.0",
-        "typescript": "^2.9.1",
+        "typescript": "^3.2.0",
         "webpack": "^4.11.1",
         "webpack-cli": "^3.0.2",
-        "webpack-dev-server": "^3.1.4",
-        "rxjs": "^5.5.6"
+        "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
         "es6-promise": "^4.2.4"
