--- a/webgl/.prettierrc
+++ b/webgl/.prettierrc
@@ -3,6 +3,6 @@
     "singleQuote": true,
     "semi": true,
     "no-prose-wrap": true,
-    "trailingComma": "es5",
+    "trailingComma": "all",
     "extends": ["tslint:latest", "tslint-config-prettier"]
 }
