--- a/canvasTest/tsconfig.json
+++ b/canvasTest/tsconfig.json
@@ -4,7 +4,7 @@
         "experimentalDecorators": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "rootDir": "src",
+        "rootDir": "./",
         "skipDefaultLibCheck": true,
         "skipLibCheck": true,
         "sourceMap": true,
