--- a/webgl/package.json
+++ b/webgl/package.json
@@ -28,6 +28,7 @@
         "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
-        "es6-promise": "^4.2.4"
+        "es6-promise": "^4.2.4",
+        "paper": "^0.12.0"
     }
 }
