--- a/canvasTest/package.json
+++ b/canvasTest/package.json
@@ -26,6 +26,8 @@
         "rxjs": "^5.5.6"
     },
     "dependencies": {
-        "es6-promise": "^4.2.4"
+        "es6-promise": "^4.2.4",
+        "glslify-loader": "^2.0.0",
+        "raw-loader": "^1.0.0"
     }
 }
