--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 authors = ["me <zsytssk@gmail.com>"]
 
 [dependencies]
+image = "0.21.1"
+tokio = "0.1.18"
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
