--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -2,12 +2,10 @@
 name = "test"
 version = "0.1.0"
 authors = ["me <zsytssk@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-image = "0.21.1"
-tokio = "0.1.18"
-futures = "0.1.26"
-
-[lib]
-name = "lib"
-path = "src/lib.rs"
+clap = "2.33.0"
+rust-crypto = "0.2.36"
+regex = "1"
+lazy_static = "1.3.0"
