--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -2,5 +2,8 @@
 name = "test"
 version = "0.1.0"
 authors = ["me <zsytssk@gmail.com>"]
+edition = "2018"
 
 [dependencies]
+futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
+hyper = "0.12.9"
