--- a/rxjs/tsconfig.json
+++ b/rxjs/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "experimentalDecorators": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "rootDir": "src",
     "skipDefaultLibCheck": true,
