--- a/rust/normal/Cargo.toml
+++ b/rust/normal/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["me <zsytssk@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-hyper = "0.12.9"
+async-std = { version = "1.2.0", features = ["unstable"]}
