--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "webpack4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "webpack-dev": "webpack --mode development --config webpack.config.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "ts-loader": "^4.0.0",
-    "typescript": "^2.7.2",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0"
-  },
-  "dependencies": {
-    "@types/node": "^12.12.14",
-    "redux": "^3.7.2"
-  }
+    "name": "webpack4",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "ts-node  --files ./src/main.ts"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "ts-loader": "^4.0.0",
+        "typescript": "^2.7.2",
+        "webpack": "^4.0.0",
+        "webpack-cli": "^2.0.9",
+        "webpack-dev-server": "^3.0.0"
+    },
+    "dependencies": {
+        "@types/node": "^12.12.14",
+        "babylon": "^7.0.0-beta.47",
+        "recast": "^0.20.4",
+        "redux": "^3.7.2"
+    }
 }
