--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "ts-node  --files ./src/main.ts"
+        "test": "ts-node --files ./src/main.ts"
     },
     "author": "",
     "license": "ISC",
@@ -19,6 +19,7 @@
         "@types/node": "^12.12.14",
         "babylon": "^7.0.0-beta.47",
         "recast": "^0.20.4",
-        "redux": "^3.7.2"
+        "redux": "^3.7.2",
+        "ts-node": "^10.4.0"
     }
 }
