--- a/typescript/package.json
+++ b/typescript/package.json
@@ -9,17 +9,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "ts-loader": "^4.0.0",
-        "typescript": "^2.7.2",
-        "webpack": "^4.0.0",
-        "webpack-cli": "^2.0.9",
-        "webpack-dev-server": "^3.0.0"
+        "typescript": "^4.5.4"
     },
     "dependencies": {
         "@types/node": "^12.12.14",
-        "babylon": "^7.0.0-beta.47",
-        "recast": "^0.20.4",
-        "redux": "^3.7.2",
         "ts-node": "^10.4.0"
     }
 }
